deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-python-app
  labels:
    app: simple-python-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-python-app
  template:
    metadata:
      labels:
        app: simple-python-app
    spec:
      containers:
      - name: python-django-app
        image: siddik811/python_django_k8s
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
