ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-example-host
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: "foo.bar.com"
    http:
      paths:
      - path: /bar(/|$)(.*)     # ✅ THIS IS VALID FOR Prefix
        pathType: Prefix
        backend:
          service:
            name: python-django-service
            port:
              number: 80
